readme improvements and bugfix pointer move listener

--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "build": "tsc",
     "build-storybook": "build-storybook",
     "chk": "FORCE_COLOR=1 run-p 'chk:*'",
-    "chk:tsc-tests": "echo noop",
+    "chk:tsc-tests": "tsc -p src/specs/tsconfig.json",
     "chk:tsc-stories": "tsc -p src/stories/tsconfig.json",
     "lint": "eslint 'src/**/*' --format codeframe --report-unused-disable-directives",
-    "test": "echo noop",
+    "test": "jest",
     "watch": "FORCE_COLOR=1 run-p 'watch:*'",
     "watch:ts": "tsc -w --preserveWatchOutput",
     "storybook": "start-storybook -p 6006"
@@ -49,15 +49,18 @@
     "@storybook/react": "^6",
     "@types/d3": "^7",
     "@types/d3-scale": "^4",
+    "@types/jest": "^28",
     "@types/react": "^18",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
+    "babel-jest": "^28",
     "babel-loader": "^8",
     "d3": "^7",
     "d3-scale": "^4",
     "eslint": "^8",
     "eslint-formatter-codeframe": "^7",
     "eslint-plugin-react-hooks": "^4",
+    "jest": "^28",
     "npm-run-all": "^4",
     "react": "^18",
     "react-d3-axis-ts": "^1",
