--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@storybook/react": "^6",
     "@types/d3": "^7",
     "@types/d3-scale": "^4",
+    "@types/d3-scale-chromatic": "^3",
     "@types/jest": "^28",
     "@types/react": "^18",
     "@typescript-eslint/eslint-plugin": "^5",
@@ -56,7 +57,9 @@
     "babel-jest": "^28",
     "babel-loader": "^8",
     "d3": "^7",
+    "d3-random": "^3",
     "d3-scale": "^4",
+    "d3-scale-chromatic": "^3",
     "eslint": "^8",
     "eslint-formatter-codeframe": "^7",
     "eslint-plugin-react-hooks": "^4",
