--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@storybook/react": "^6",
     "@types/d3": "^7",
     "@types/d3-array": "^3",
+    "@types/d3-dsv": "^3",
     "@types/d3-scale": "^4",
     "@types/d3-scale-chromatic": "^3",
     "@types/d3-shape": "^3",
@@ -60,6 +61,7 @@
     "babel-loader": "^8",
     "d3": "^7",
     "d3-array": "^3",
+    "d3-dsv": "^3",
     "d3-random": "^3",
     "d3-scale": "^4",
     "d3-scale-chromatic": "^3",
