--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@storybook/manager-webpack5": "^6",
     "@storybook/react": "^6",
     "@types/d3-array": "^3",
+    "@types/d3-delaunay": "^6",
     "@types/d3-dsv": "^3",
+    "@types/d3-random": "^3",
     "@types/d3-scale": "^4",
     "@types/d3-scale-chromatic": "^3",
     "@types/d3-shape": "^3",
@@ -80,5 +82,8 @@
   },
   "files": [
     "lib"
-  ]
+  ],
+  "dependencies": {
+    "d3-delaunay": "^6.0.4"
+  }
 }
