--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "babel-jest": "^28",
     "babel-loader": "^8",
     "d3-array": "^3",
+    "d3-delaunay": "^6",
     "d3-dsv": "^3",
     "d3-random": "^3",
     "d3-scale": "^4",
@@ -82,8 +83,5 @@
   },
   "files": [
     "lib"
-  ],
-  "dependencies": {
-    "d3-delaunay": "^6.0.4"
-  }
+  ]
 }
