--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/d3-scale-chromatic": "^3",
     "@types/d3-shape": "^3",
     "@types/jest": "^28",
+    "@types/lodash": "^4",
     "@types/react": "^18",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
@@ -71,6 +72,7 @@
     "eslint-formatter-codeframe": "^7",
     "eslint-plugin-react-hooks": "^4",
     "jest": "^28",
+    "lodash": "^4",
     "npm-run-all": "^4",
     "react": "^18",
     "react-d3-axis-ts": "^1",
