--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "use-d3-pan-zoom",
   "version": "1.1.4",
-  "author": "https://github.com/ts-web/",
-  "license": "ISC",
   "description": "A headless hook for translating mouse/touch/pointer events to pan/zoom interactions. This is an adaptation of d3-zoom to React",
+  "license": "MIT",
+  "author": "https://github.com/ts-web/",
+  "funding": "https://github.com/sponsors/ts-web",
   "keywords": [
     "react",
     "d3-zoom",
@@ -17,14 +18,16 @@
     "url": "https://github.com/ts-web/use-d3-pan-zoom.git"
   },
   "homepage": "https://ts-web.github.io/use-d3-pan-zoom/",
-  "main": "./lib/index.js",
-  "types": "./lib/index.d.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "sideEffects": false,
   "scripts": {
+    "build": "tsup",
+    "prepack": "pnpm run build",
     "start": "storybook dev -p 6007",
     "all": "FORCE_COLOR=1 run-p build chk test lint",
     "clean": "rimraf lib",
-    "build": "tsc",
     "build-storybook": "storybook build",
     "chk": "FORCE_COLOR=1 run-p 'chk:*'",
     "chk:tsc-tests": "tsc -p src/specs/tsconfig.json",
@@ -43,10 +46,12 @@
     "@babel/preset-env": "^7",
     "@babel/preset-react": "^7",
     "@babel/preset-typescript": "^7",
+    "@eslint/js": "^9.9.1",
     "@storybook/addon-actions": "^8.2.7",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
     "@storybook/react": "^8.2.7",
     "@storybook/react-webpack5": "^8.2.7",
+    "@stylistic/eslint-plugin": "^2.6.4",
     "@types/d3-array": "^3",
     "@types/d3-delaunay": "^6",
     "@types/d3-dsv": "^3",
@@ -54,11 +59,11 @@
     "@types/d3-scale": "^4",
     "@types/d3-scale-chromatic": "^3",
     "@types/d3-shape": "^3",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^28",
     "@types/lodash": "^4",
+    "@types/node": "^22.5.0",
     "@types/react": "^18",
-    "@typescript-eslint/eslint-plugin": "^5",
-    "@typescript-eslint/parser": "^5",
     "babel-jest": "^28",
     "babel-loader": "^8",
     "d3-array": "^3",
@@ -68,9 +73,9 @@
     "d3-scale": "^4",
     "d3-scale-chromatic": "^3",
     "d3-shape": "^3",
-    "eslint": "^8",
-    "eslint-formatter-codeframe": "^7",
-    "eslint-plugin-react-hooks": "^4",
+    "eslint": "^9.9.1",
+    "eslint-formatter-codeframe": "^7.32.1",
+    "eslint-plugin-react-hooks": "5.1.0-rc-b57d2823-20240822",
     "jest": "^28",
     "lodash": "^4",
     "npm-run-all": "^4",
@@ -81,13 +86,14 @@
     "rimraf": "^6",
     "storybook": "^8.2.7",
     "tsconfig-paths-webpack-plugin": "^4",
-    "tween-functions-ts": "^1",
+    "tsup": "^8.2.3",
+    "tween-functions-ts": "^1.1.4",
     "typescript": "^5",
+    "typescript-eslint": "^8.2.0",
     "use-resize-observer": "^9.1.0",
     "use-rev": "^1"
   },
   "files": [
-    "lib"
-  ],
-  "packageManager": "pnpm@9.5.0"
+    "dist"
+  ]
 }
