--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,27 +1,73 @@
-on:
-  push:
-    branches:
-      - "main"
+name: Deploy Storybook site to Pages (pnpm)
 
+on:
+  # Runs on pushes targeting the default branch
+  push:
+    branches: [main]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
-  deploy:
+  # Build job
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Setup PNPM
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: ${{ steps.detect-package-manager.outputs.manager }}
+
+      - name: Setup pnpm
         uses: pnpm/action-setup@v3
         with:
+          version: 9
           run_install: true
 
-      - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+      - uses: actions/configure-pages@v5
+
+      - name: Restore cache
+        uses: actions/cache@v4
         with:
-          install_command: pnpm install
-          build_command: pnpm build-storybook
-          path: storybook-static
-          checkout: false # default: true
+          path: |
+            node_modules/cache
+          # Generate a new cache whenever packages or source files change.
+          key: ${{ runner.os }}-storybook-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
+          restore-keys: |
+            ${{ runner.os }}-storybook-${{ hashFiles('**/pnpm-lock.yaml') }}-
+
+      - run: pnpm i
+      - run: pnpm build-storybook
+
+      - uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./storybook-static
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
